--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -82,9 +82,58 @@
 }
 /* main */
 #main {
+  margin:0px auto;
+  padding-top: 48px;
   display: -webkit-flex;
   display: flex;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
+  width: 90%;
   height: 700px;
+}
+
+#ljRender {
+  flex: 1;
+}
+
+#ljTitle {
+  border: 1px solid #000000;
+  background-color: #D3FFBE;
+}
+
+#ljText {
+  background-color: #FFFFFF;
+  border: 1px solid #000000;
+  width: 100%;
+  height: 600px;
+}
+
+#dgRender {
+  flex: 1;
+}
+
+#dgTitle {
+  border: 1px solid #000000;
+  background-color: #D3FFBE;
+}
+
+#dgText {
+  background-color: #FFFFFF;
+  border: 1px solid #000000;
+  width: 100%;
+  height: 600px;
+}
+
+#diffedRender {
+  flex: 1;
+}
+
+#diffedTitle {
+  border: 1px solid #000000;
+  background-color: #D3FFBE;
+}
+
+#diffedText {
+  background-color: #FFFFFF;
+  border: 1px solid #000000;
+  width: 100%;
+  height: 600px;
 }
