--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,12 +8,16 @@
   display: flex;
   width: 100%;
   height: 10%;
+  padding-top: 8px;
   padding-left: 8px;
 }
 
 #logo {
+  padding-top: 8px;
+  background: transparent;
+  border-radius:10px;
   width: 100px;
-  height: 100px;
+  height: 105px;
 }
 
 #logoTitle {
@@ -96,7 +100,7 @@
 
 #ljTitle {
   border: 1px solid #000000;
-  background-color: #D3FFBE;
+  background: #D3FFBE;
 }
 
 #ljText {
@@ -112,7 +116,7 @@
 
 #dgTitle {
   border: 1px solid #000000;
-  background-color: #D3FFBE;
+  background: #D3FFBE;
 }
 
 #dgText {
@@ -128,7 +132,7 @@
 
 #diffedTitle {
   border: 1px solid #000000;
-  background-color: #D3FFBE;
+  background: #D3FFBE;
 }
 
 #diffedText {
