--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,6 +105,7 @@
 }
 
 #ljText {
+  padding-left: 2px;
   background-color: #FFFFFF;
   border: 1px solid #000000;
   width: 100%;
@@ -122,6 +123,7 @@
 }
 
 #dgText {
+  padding-left: 2px;
   background-color: #FFFFFF;
   border: 1px solid #000000;
   width: 100%;
@@ -139,6 +141,7 @@
 }
 
 #diffedText {
+  padding-left: 2px;
   background-color: #FFFFFF;
   border: 1px solid #000000;
   width: 100%;
