--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,6 +105,7 @@
 }
 
 #ljText {
+  overflow: auto;
   padding-left: 2px;
   background-color: #FFFFFF;
   border: 1px solid #000000;
@@ -123,6 +124,7 @@
 }
 
 #dgText {
+  overflow: auto;
   padding-left: 2px;
   background-color: #FFFFFF;
   border: 1px solid #000000;
@@ -141,6 +143,7 @@
 }
 
 #diffedText {
+  overflow: auto;
   padding-left: 2px;
   background-color: #FFFFFF;
   border: 1px solid #000000;
