--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,45 +85,45 @@
 /* main */
 #main {
   margin: 5px auto;
-  padding-top: 56px;
+  padding-top: 80px;
   display: -webkit-flex;
   display: flex;
   width: 90%;
-  height: 750px;
+  height: auto;
 }
 
-#ljRender {
+#oldRender {
   flex: 1;
 }
 
-#ljTitle {
+#oldTitle {
   padding-left: 4px;
   border: 1px solid #000000;
 }
 
-#ljText {
+#oldText {
   overflow: auto;
   padding-left: 2px;
   border: 1px solid #000000;
   width: 100%;
-  height: 700px;
+  height: 70vh;
 }
 
-#dgRender {
+#newRender {
   flex: 1;
 }
 
-#dgTitle {
+#newTitle {
   padding-left: 4px;
   border: 1px solid #000000;
 }
 
-#dgText {
+#newText {
   overflow: auto;
   padding-left: 2px;
   border: 1px solid #000000;
   width: 100%;
-  height: 700px;
+  height: 70vh;
 }
 
 #diffedRender {
@@ -140,7 +140,7 @@
   padding-left: 2px;
   border: 1px solid #000000;
   width: 100%;
-  height: 700px;
+  height: 70vh;
 }
 
 #diffedDrawGreen {
@@ -169,11 +169,11 @@
   color: #4A8731;
 }
 
-#theme.themeGreen #ljTitle, #theme.themeGreen #dgTitle, #theme.themeGreen #diffedTitle {
+#theme.themeGreen #oldTitle, #theme.themeGreen #newTitle, #theme.themeGreen #diffedTitle {
   background: #D3FFBE;
 }
 
-#theme.themeGreen #ljText, #theme.themeGreen #dgText, #theme.themeGreen #diffedText {
+#theme.themeGreen #oldText, #theme.themeGreen #newText, #theme.themeGreen #diffedText {
   background: #FFFFFF;
 }
 
@@ -194,11 +194,11 @@
   color: #4A8731;
 }
 
-#theme.themeBlue #ljTitle, #theme.themeBlue #dgTitle, #theme.themeBlue #diffedTitle {
+#theme.themeBlue #oldTitle, #theme.themeBlue #newTitle, #theme.themeBlue #diffedTitle {
   background: #B7F2FF;
 }
 
-#theme.themeBlue #ljText, #theme.themeBlue #dgText, #theme.themeBlue #diffedText {
+#theme.themeBlue #oldText, #theme.themeBlue #newText, #theme.themeBlue #diffedText {
   background: #FFFFFF;
 }
 
@@ -219,11 +219,11 @@
   color: #4A8731;
 }
 
-#theme.themeYellow #ljTitle, #theme.themeYellow #dgTitle, #theme.themeYellow #diffedTitle {
+#theme.themeYellow #oldTitle, #theme.themeYellow #newTitle, #theme.themeYellow #diffedTitle {
   background: #FFE7B7;
 }
 
-#theme.themeYellow #ljText, #theme.themeYellow #dgText, #theme.themeYellow #diffedText {
+#theme.themeYellow #oldText, #theme.themeYellow #newText, #theme.themeYellow #diffedText {
   background: #FFFFFF;
 }
 
@@ -244,10 +244,10 @@
   color: #FFFFFF;
 }
 
-#theme.themeBlack #ljTitle, #theme.themeBlack #dgTitle, #theme.themeBlack #diffedTitle {
+#theme.themeBlack #oldTitle, #theme.themeBlack #newTitle, #theme.themeBlack #diffedTitle {
   background: #616161;
 }
 
-#theme.themeBlack #ljText, #theme.themeBlack #dgText, #theme.themeBlack #diffedText {
+#theme.themeBlack #oldText, #theme.themeBlack #newText, #theme.themeBlack #diffedText {
   background: #2B2B2B;
 }
