fix border color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -88,6 +88,7 @@
 }
 /* main */
 #main {
+  font-size: 16.5px;
   margin: 5px auto;
   padding-top: 80px;
   display: -webkit-flex;
@@ -102,13 +103,13 @@
 
 #oldTitle {
   padding-left: 4px;
-  border: 1px solid #000000;
+  border: 1px solid #DDDDDD;
 }
 
 #oldText {
   overflow: auto;
   padding-left: 2px;
-  border: 1px solid #000000;
+  border: 1px solid #DDDDDD;
   width: 100%;
   height: 70vh;
 }
@@ -119,13 +120,13 @@
 
 #newTitle {
   padding-left: 4px;
-  border: 1px solid #000000;
+  border: 1px solid #DDDDDD;
 }
 
 #newText {
   overflow: auto;
   padding-left: 2px;
-  border: 1px solid #000000;
+  border: 1px solid #DDDDDD;
   width: 100%;
   height: 70vh;
 }
@@ -136,13 +137,13 @@
 
 #diffedTitle {
   padding-left: 4px;
-  border: 1px solid #000000;
+  border: 1px solid #DDDDDD;
 }
 
 #diffedText {
   overflow: auto;
   padding-left: 2px;
-  border: 1px solid #000000;
+  border: 1px solid #DDDDDD;
   width: 100%;
   height: 70vh;
 }
