fix pageInput on click & warn

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,6 +47,14 @@
   font-size: 20px;
 }
 
+#pageInput.notWarn {
+  color: black;
+}
+
+#pageInput.warn {
+  color: #FF4949;
+}
+
 #pageSelectLeft {
   width: 40px;
   height: 32px;
