--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,29 +7,28 @@
   background-color: transparent;
   display: flex;
   width: 100%;
-  height: 10%;
+  height: 80px;
   padding-top: 8px;
   padding-left: 8px;
 }
 
 #logo {
-  padding-top: 8px;
-  border-radius:10px;
-  width: 100px;
-  height: 105px;
+  border-radius: 5px;
+  width: 50px;
+  height: 52px;
 }
 
 #logoTitle {
-  flex: 5;
-  font-size: 200%;
-  text-align: left;
-  padding-top: 42px; 
+  padding-left: 2px;
+  padding-top: 4px;
+  font-size: 32px;
+  text-align: left; 
 }
 
 #titleRight {
   flex: 5;
   text-align: right;
-  padding-top: 80px;
+  padding-top: 14px;
   padding-right: 12%;
 }
 
@@ -55,14 +54,7 @@
   color: #FF4949;
 }
 
-#pageSelectLeft {
-  width: 40px;
-  height: 32px;
-  background-color: #FFFFFF;
-  border: 1px solid #DDDDDD;
-}
-
-#pageSelectRight {
+#pageSelectLeft, #pageSelectRight {
   width: 40px;
   height: 32px;
   background-color: #FFFFFF;
@@ -96,64 +88,41 @@
 }
 /* main */
 #main {
+  padding-top: 1px;
   font-size: 16.5px;
-  margin: 5px auto;
-  padding-top: 80px;
+  padding-left: 3%;
+  padding-right: 3%;
   display: -webkit-flex;
   display: flex;
-  width: 90%;
-  height: auto;
+  width: 100%;
+  height: 85%;
 }
 
-#oldRender {
+#oldRender, #newRender, #diffedRender {
   flex: 1;
+  height: 100%;
 }
 
-#oldTitle {
+#oldTitle, #newTitle, #diffedTitle {
   padding-left: 4px;
-  border: 1px solid #DDDDDD;
 }
 
-#oldText {
+#oldText, #newText, #diffedText {
   overflow: auto;
   padding-left: 2px;
-  border: 1px solid #DDDDDD;
   width: 100%;
-  height: 70vh;
-}
-
-#newRender {
-  flex: 1;
-}
-
-#newTitle {
-  padding-left: 4px;
-  border: 1px solid #DDDDDD;
-}
-
-#newText {
-  overflow: auto;
-  padding-left: 2px;
-  border: 1px solid #DDDDDD;
-  width: 100%;
-  height: 70vh;
+  height: 95%;
 }
 
 #diffedRender {
   flex: 1;
 }
 
-#diffedTitle {
-  padding-left: 4px;
-  border: 1px solid #DDDDDD;
-}
-
-#diffedText {
-  overflow: auto;
+.closeRender {
+  font-size: 20px; 
+  display: inline;
   padding-left: 2px;
-  border: 1px solid #DDDDDD;
-  width: 100%;
-  height: 70vh;
+  cursor: pointer;
 }
 
 #diffedDrawGreen {
@@ -163,7 +132,6 @@
 #diffedDrawRed {
   background: #FF4949;
 }
-
 
 /* theme green */
 #theme.themeGreen {
@@ -178,16 +146,18 @@
   color: #000000;
 }
 
-#theme.themeGreen #logoTitle {
+#theme.themeGreen #logoTitle, #theme.themeGreen #smallLogoTitle{
   color: #4A8731;
 }
 
 #theme.themeGreen #oldTitle, #theme.themeGreen #newTitle, #theme.themeGreen #diffedTitle {
   background: #D3FFBE;
+  border: 1px solid #DDDDDD;
 }
 
 #theme.themeGreen #oldText, #theme.themeGreen #newText, #theme.themeGreen #diffedText {
   background: #FFFFFF;
+  border: 1px solid #DDDDDD;
 }
 
 /* theme blue */
@@ -209,10 +179,12 @@
 
 #theme.themeBlue #oldTitle, #theme.themeBlue #newTitle, #theme.themeBlue #diffedTitle {
   background: #B7F2FF;
+  border: 1px solid #DDDDDD;
 }
 
 #theme.themeBlue #oldText, #theme.themeBlue #newText, #theme.themeBlue #diffedText {
   background: #FFFFFF;
+  border: 1px solid #DDDDDD;
 }
 
 /* theme yellow */
@@ -234,10 +206,12 @@
 
 #theme.themeYellow #oldTitle, #theme.themeYellow #newTitle, #theme.themeYellow #diffedTitle {
   background: #FFE7B7;
+  border: 1px solid #DDDDDD;
 }
 
 #theme.themeYellow #oldText, #theme.themeYellow #newText, #theme.themeYellow #diffedText {
   background: #FFFFFF;
+  border: 1px solid #DDDDDD;
 }
 
 /* theme black */
@@ -259,8 +233,10 @@
 
 #theme.themeBlack #oldTitle, #theme.themeBlack #newTitle, #theme.themeBlack #diffedTitle {
   background: #616161;
+  border: 1px solid #000000;
 }
 
 #theme.themeBlack #oldText, #theme.themeBlack #newText, #theme.themeBlack #diffedText {
   background: #2B2B2B;
+  border: 1px solid #000000;
 }
