--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,7 +20,7 @@
 #titleRight {
   flex: 5;
   text-align: right;
-  padding-top: 8px;
+  padding-top: 6px;
   padding-right: 5%;
 }
 
@@ -52,6 +52,8 @@
 }
 
 #themeSelector {
+  height: 34px;
+  width: 80px;
   display:inline;
   border-radius: 5px;
 }
@@ -105,9 +107,22 @@
 #oldText, #newText, #diffedText {
   font-size: 20px;
   overflow: auto;
-  padding-left: 2px;
+  padding-left: 5px;
+  padding-right: 3px;
   width: 100%;
   height: 95%;
+}
+
+#oldTitle, #oldText {
+  box-shadow: 0px 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 5px 0 rgba(0, 0, 0, 0.19);
+}
+
+#newTitle, #newText {
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 5px 0 rgba(0, 0, 0, 0.19);
+}
+
+#diffedTitle, #diffedText {
+  box-shadow: 0px 4px 4px 0 rgba(0, 0, 0, 0.1), 0 6px 5px 0 rgba(0, 0, 0, 0.09) , 3px 4px 4px 0 rgba(0, 0, 0, 0.1), 3px 6px 5px 0 rgba(0, 0, 0, 0.09);
 }
 
 #diffedRender {
@@ -127,6 +142,50 @@
 
 #diffedDrawRed {
   background: #FF4949;
+}
+/* theme default */
+#theme.themeDefault {
+  background: #FAFAFA;
+}
+
+#theme.themeDefault #main {
+  color: #050505;
+}
+
+#theme.themeDefault #logoTitle {
+  color: #050505;
+}
+
+#theme.themeDefault #pageSelectLeft, #theme.themeDefault #pageSelectRight {
+  color: #000000;
+  background-color: #FFFFFF;
+  border: 1px solid #BBBBBB;
+}
+
+#theme.themeDefault #themeDropdown {
+  color: #000000;
+  background-color: #FFFFFF;
+  border-color: #BBBBBB;
+}
+
+#theme.themeDefault #themeDropdown:hover, .open > #theme.themeDefault #themeDropdown:hover, .open > #theme.themeDefault #themeDropdown:focus {
+  color: #000000;
+  background-color: #F7F7F7;
+  border-color: #616161;
+}
+
+#theme.themeDefault .dropdown-menu {
+  background-color: #F9F9F9;
+}
+
+#theme.themeDefault #oldTitle, #theme.themeDefault #newTitle, #theme.themeDefault #diffedTitle {
+  background: #F7F7F7;
+  border: 1px solid #BBBBBB;
+}
+
+#theme.themeDefault #oldText, #theme.themeDefault #newText, #theme.themeDefault #diffedText {
+  background: #FFFFFF;
+  border: 1px solid #BBBBBB;
 }
 /* theme green */
 #theme.themeGreen {
@@ -168,51 +227,6 @@
   background: #FBFFF8;
   border: 1px solid #DDDDDD;
 }
-/* theme default */
-#theme.themeDefault {
-  background: #FAFAFA;
-}
-
-#theme.themeDefault #main {
-  color: #050505;
-}
-
-#theme.themeDefault #logoTitle {
-  color: #050505;
-}
-
-#theme.themeDefault #pageSelectLeft, #theme.themeDefault #pageSelectRight {
-  color: #000000;
-  background-color: #FFFFFF;
-  border: 1px solid #DDDDDD;
-}
-
-#theme.themeDefault #themeDropdown {
-  color: #000000;
-  background-color: #FFFFFF;
-  border-color: #DDDDDD;
-}
-
-#theme.themeDefault #themeDropdown:hover, .open > #theme.themeDefault #themeDropdown:hover, .open > #theme.themeDefault #themeDropdown:focus {
-  color: #000000;
-  background-color: #F7F7F7;
-  border-color: #616161;
-}
-
-#theme.themeDefault .dropdown-menu {
-  background-color: #F9F9F9;
-}
-
-#theme.themeDefault #oldTitle, #theme.themeDefault #newTitle, #theme.themeDefault #diffedTitle {
-  background: #F7F7F7;
-  border: 1px solid #DDDDDD;
-}
-
-#theme.themeDefault #oldText, #theme.themeDefault #newText, #theme.themeDefault #diffedText {
-  background: #FFFFFF;
-  border: 1px solid #DDDDDD;
-}
-
 /* theme black */
 #theme.themeBlack {
   background: #2B2B2B;
