fix css & rm logo.png

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,2 @@
-@import url("./../assets/css/main.css");
+@import url('../node_modules/codemirror/lib/codemirror.css');
+@import url('./../assets/css/main.css');
