--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -91,7 +91,18 @@
   display: -webkit-flex;
   display: flex;
   width: 100%;
-  height: 90%;
+  height: calc(100% - 42px);
+}
+
+.resizeBar {
+  width: 6px;
+  height: 100%;
+  cursor: col-resize;
+  resize: horizontal;
+  background: #DDDDDD;
+  border-top-style: solid;
+  border-bottom-style: solid;
+  border-color: #DDDDDD;
 }
 
 #oldRender, #newRender, #diffedRender {
@@ -100,19 +111,20 @@
 }
 
 .ReactCodeMirror {
-  height: 99%;
+  height: 100%;
 }
 
 #oldTitle, #newTitle, #diffedTitle {
   padding-left: 4px;
   font-size: 18px;
+  height: 30px;
 }
 
 .CodeMirror, #diffedText {
   font-size: 20px;
   overflow-x: hidden;
   overflow-y: auto;
-  height: 95%;
+  height: calc(100% - 30px);
 }
 
 #oldTitle, .CodeMirror {
