fix diffedText padding-top

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,6 +173,7 @@ button, #importButton, input:focus {
 }
 
 #diffedText {
+  padding-top: 0.15em;
   font-size: 1.2em;
   overflow-x: hidden;
   overflow-y: auto;
